--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: ARTP3
 Type: Package
 Title: Pathway and gene level association test using summary statistics
-Version: 0.1.0
-Date: 2015-06-07
+Version: 0.2.0
+Date: 2015-07-03
 Author: Han Zhang, Bill Wheeler, Kai Yu, Yifan Yang
 Maintainer: Han Zhang <han.zhang2@nih.gov>
-Depends: parallel
+Depends: parallel, Formula, data.table
 Description: NULL
 License: MIT + file LICENSE
-Packaged: 2015-06-07 01:26:33 UTC; zhangh12
+Packaged: 2015-07-03 04:00:00 UTC; zhangh12
