--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: ARTP3
 Type: Package
 Title: Pathway and gene level association test
-Version: 0.3.0
-Date: 2015-07-09
+Version: 0.4.0
+Date: 2015-07-15
 Author: Han Zhang, Bill Wheeler, Kai Yu, Yifan Yang
 Maintainer: Han Zhang <han.zhang2@nih.gov>
-Depends: parallel, Formula, data.table
+Depends: R (>= 2.10), parallel, Formula, data.table
 Description: Pathway and gene level association test using raw data or summary statistics. 
 License: MIT + file LICENSE
-Packaged: 2015-07-09 17:00:00 UTC; zhangh12
+Packaged: 2015-07-15 11:00:00 UTC; zhangh12
