--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: ARTP2
 Type: Package
-Title: Pathway and gene level association test
-Version: 0.9.9
-Date: 2016-01-07
+Title: Pathway and gene-level association test
+Version: 0.9.10
+Date: 2016-01-14
 Author: Han Zhang, Bill Wheeler, Kai Yu, Yifan Yang
 Maintainer: Han Zhang <han.zhang2@nih.gov>
 Depends: R (>= 2.10), parallel, Formula, data.table
