--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: ARTP2
 Type: Package
-Title: Pathway and gene-level association test
-Version: 0.9.19
-Date: 2016-02-04
+Title: Pathway and Gene-Level Association Test
+Version: 0.9.20
+Date: 2016-02-10
 Author: Han Zhang, Bill Wheeler, Kai Yu, Yifan Yang
 Maintainer: Han Zhang <han.zhang2@nih.gov>
 Depends: R (>= 2.10), parallel, Formula, data.table
