--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,4 @@
 import(parallel, Formula, data.table)
 useDynLib(ARTP2)
 export(pathway.summaryData, pathway.warm.start, pathway.rawData, 
-       read.bed, meta, options.default, multiple.comparison.summaryData)
+       read.bed, meta, options.default)
