--- a/.gitignore
+++ b/.gitignore
@@ -3,17 +3,14 @@
 
 # Example code in package build process
 *-Ex.R
-
 # R data files from past sessions
 .Rdata
-
 # RStudio files
 .Rproj.user/
 .Rproj.user
-
 # Library files
 *.o
 *.so
-
 # Temporary files
 *.bin
+inst/doc
