--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,3 @@
 import(Formula, data.table, parallel, stats, utils)
 useDynLib(ARTP2)
-export(rARTP, sARTP, warm.start, read.bed, meta, options.default)
+export(rARTP, sARTP, warm.start, read.bed, meta, exclude.snps, options.default)
