--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,4 @@
 import(Formula, data.table, parallel, stats, utils)
 useDynLib(ARTP2)
 export(rARTP, sARTP, warm.start, options.default, 
-       read.bed, meta, exclude.snps, 
-       inflation, create.direction)
+       read.bed, meta, exclude.snps, inflation)
