--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: ARTP2
 Type: Package
 Title: Pathway and Gene-Level Association Test
-Version: 0.9.30
-Date: 2016-06-09
-Author: Han Zhang, Bill Wheeler, Kai Yu, Yifan Yang
+Version: 0.9.31
+Date: 2017-01-11
+Author: Han Zhang, Bill Wheeler, Kai Yu, Yifan Yang, R Core Team
 Maintainer: Han Zhang <han.zhang2@nih.gov>
 Depends: R (>= 2.10), Formula, data.table, stats, utils, parallel
 Description: Pathway and gene level association test using raw data or summary statistics.
