--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: ARTP2
 Type: Package
 Title: Pathway and Gene-Level Association Test
-Version: 0.9.34
+Version: 0.9.35
 Date: 2017-05-24
 Author: Han Zhang, Bill Wheeler, Kai Yu, Yifan Yang, R Core Team
 Maintainer: Han Zhang <han.zhang2@nih.gov>
-Depends: R (>= 3.4.0), Formula, data.table, stats, utils, parallel
+Depends: R (>= 3.4.0), stats, utils
+Imports: Formula, parallel, data.table (>= 1.9.4)
+Enhances: ARTP
 Description: Pathway and gene level association test using raw data or summary statistics.
 License: GPL-2 | GPL-3
 URL: https://github.com/zhangh12/ARTP2
