--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,7 @@
-import(Formula, data.table, parallel, stats, utils)
+import(stats, utils)
+importFrom(Formula, Formula, model.part)
+importFrom(parallel, detectCores)
+importFrom(data.table, setDT, ':=', data.table, setnames)
 useDynLib(ARTP2, .registration = TRUE)
 export(rARTP, sARTP, warm.start, options.default, 
        read.bed, meta, exclude.snps, inflation)
