--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: ARTP2
 Type: Package
 Title: Pathway and Gene-Level Association Test
-Version: 0.9.39
-Date: 2017-08-31
+Version: 0.9.44
+Date: 2018-09-11
 Author: Han Zhang, Bill Wheeler, Kai Yu, Yifan Yang, R Core Team
-Maintainer: Han Zhang <han.zhang2@nih.gov>
+Maintainer: Bill Wheeler <wheelerb@imsweb.com>
 Depends: R (>= 3.4.0), stats, utils
 Imports: Formula, parallel, data.table (>= 1.9.4)
 Enhances: ARTP
@@ -14,3 +14,6 @@ URL: https://github.com/zhangh12/ARTP2
 BugReports: https://github.com/zhangh12/ARTP2/issues
 SystemRequirements: C++11
 NeedsCompilation: yes
+Packaged: 2018-09-11 18:47:11 UTC; wheelerwi
+Repository: CRAN
+Date/Publication: 2018-09-11 21:50:02 UTC
