--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: ARTP2
 Type: Package
 Title: Pathway and Gene-Level Association Test
 Version: 0.9.45
-Date: 2018-10-04
+Date: 2018-11-30
 Author: Han Zhang, Bill Wheeler, Kai Yu, Yifan Yang, R Core Team
 Maintainer: Bill Wheeler <wheelerb@imsweb.com>
 Depends: R (>= 3.4.0), stats, utils
@@ -14,4 +14,6 @@ URL: https://github.com/zhangh12/ARTP2
 BugReports: https://github.com/zhangh12/ARTP2/issues
 SystemRequirements: C++11
 NeedsCompilation: yes
+Packaged: 2018-11-30 20:38:35 UTC; wheelerwi
 Repository: CRAN
+Date/Publication: 2018-11-30 21:30:03 UTC
