--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@ import(stats, utils)
 importFrom(Formula, Formula, model.part)
 importFrom(parallel, detectCores)
 importFrom(data.table, setDT, ':=', data.table, setnames)
+importFrom(data.table, fread, setDF)
 useDynLib(ARTP2, .registration = TRUE)
 export(rARTP, sARTP, warm.start, options.default, 
        read.bed, meta, exclude.snps, inflation)
